Klaar met de opdracht

--- a/index.html
+++ b/index.html
@@ -17,149 +17,154 @@
 
 <body class="bg-black text-white">
 
-<header>
-  <div data-aos="fade-down" data-aos-easing="linear" data-aos-duration="1500">
-  <div class="container-fluid pt-2">
-    <div class="row">
-      <div class="col-sm-2 text-center">
-        <a class="link-underline-dark text-white" href="index.html">
-          <nav class="navbar-btn">
-            <i class="bi bi-house-fill"></i>
-            <p>Home</p>
-          </nav>
-        </a>
-      </div>
-      <div class="col-sm-2 text-center">
-        <a class="link-underline-dark text-white" href="#about-me">
-          <nav class="navbar-btn">
-            <i class="bi bi-person-circle"></i>
-            <p>About me</p>
-          </nav>
-        </a>
-      </div>
-      <div class="col-sm-2 text-center">
-        <a class="link-underline-dark text-white" href="#contact">
-          <nav class="navbar-btn">
-            <i class="bi bi-telephone-fill"></i>
-            <p>Contact</p>
-          </nav>
-        </a>
-      </div>
-      <div class="col-sm-2 text-center">
-        <i class="bi bi-archive-fill"></i>
-        <div class="nav-item dropdown">
-          <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button" aria-haspopup="true"
-            aria-expanded="false">Projecten</a>
-          <div class="dropdown-menu">
-            <a class="dropdown-item" href="higher-lower.html">Higher lower</a>
-            <a class="dropdown-item" href="build-a-game.html">Build a game</a>
-            <a class="dropdown-item" href="web-catalog.html">Web catalog</a>
-            <a class="dropdown-item" href="dashboard.html">Dashboard</a>
-            <div class="dropdown-divider"></div>
-            <a class="dropdown-item" href="escape-room.html">Escape room</a>
-            <a class="dropdown-item" href="slime-runner.html">Slime runner</a>
+  <header>
+    <div data-aos="fade-down" data-aos-easing="linear" data-aos-duration="1500">
+      <div class="container-fluid pt-2">
+        <div class="row">
+          <div class="col-sm-2 text-center">
+            <a class="link-underline-dark text-white" href="index.html">
+              <nav class="navbar-btn">
+                <i class="bi bi-house-fill"></i>
+                <p>Intro</p>
+              </nav>
+            </a>
+          </div>
+          <div class="col-sm-2 text-center">
+            <a class="link-underline-dark text-white" href="#about-me">
+              <nav class="navbar-btn">
+                <i class="bi bi-person-circle"></i>
+                <p>Werk zoeken en rechten en plichten</p>
+              </nav>
+            </a>
+          </div>
+          <div class="col-sm-2 text-center">
+            <a class="link-underline-dark text-white" href="#contact">
+              <nav class="navbar-btn">
+                <i class="bi bi-telephone-fill"></i>
+                <p>Tips en ondersteuningen en de huidige arbeidsmarkt</p>
+              </nav>
+            </a>
+          </div>
+          <div class="col-sm-4 text-center">
+            <img class="w-25" src="img/Logo Dayan.png" alt="">
           </div>
         </div>
       </div>
-      <div class="col-sm-4 text-center">
-        <img class="w-25" src="img/Logo Dayan.png" alt="">
+    </div>
+  </header>
+
+
+  <main>
+    <div class="container-md pt-5">
+      <div class="row pt-5">
+        <div class="col-sm-6">
+          <h1 class="welcome">Welkom bij de website over werk</h1>
+          <p class="h4 pt-5">Op onze website vind je volgende: waar je informatie vindt over werk, arbeidsrechten en
+            tips voor het
+            vinden en behouden van een baan. We bieden ondersteuning voor werkzoekenden en inzicht in de huidige
+            arbeidsmarkt. Bereid je voor op de toekomst van werk en leer hoe je je rechten kunt beschermen! </p>
+        </div>
+        <div class="col-sm-6">
+          <p><img class="w-50" src="img/OIP.jfif" alt=""></p>
+        </div>
       </div>
     </div>
-  </div>
-</div>
-</header>
+
+    <div class="container-md py-5">
+      <hr class="white">
+    </div>
 
 
-<main>
-  <div class="container-md pt-5">
-    <div class="row pt-5">
-      <div class="col-sm-6">
-        <h1 class="welcome">Welcome to my portfolio</h1>
-        <p class="h4 pt-5">My name is Dayan and I'm a passionate software developer. You can check out my projects to see what I've created and learn
-          about me while checking out my portfolio.</p>
-      </div>
-      <div class="col-sm-6">
-        <img class="w-75 ps-5" src="img/Image (1).jfif" alt="">
+    <div id="about-me" class="about-me container-md">
+      <div class="row">
+        <div class="col-sm-5">
+          <div data-aos="fade-right" data-aos-duration="3000">
+            <h1>Werk zoeken</h1>
+            <p>Er zijn verschillende manieren om werk te vinden. Gebruik vacaturesites zoals Indeed, LinkedIn en
+              Glassdoor voor een grote aanbod van banen. Netwerken is ook belangrijk: bezoek evenementen en workshops in
+              jouw vakgebied. Daarnaast kun je je inschrijven bij uitzendbureaus die je helpen bij het vinden van
+              tijdelijke of vaste banen. </p>
+          </div>
+        </div>
+        <div class="col-sm-6 ps-5 ms-5">
+          <div data-aos="fade-left" data-aos-duration="3000">
+            <h1>Rechten en plichten</h1>
+            <p>In Nederland hebben werknemers recht op verschillende arbeidsrechten. Het minimumloon wordt regelmatig
+              aangepast en geldt voor werknemers van 21 jaar en ouder. De Arbeidstijdenwet beperkt de werkweek tot
+              maximaal 60 uur en garandeert minimaal 11 uur rust per dag. Werknemers hebben recht op vakantiedagen,
+              betaald ziekteverlof, ouderschapsverlof en bijzonder verlof voor speciale gelegenheden. </p>
+          </div>
+        </div>
       </div>
     </div>
-  </div>
-
-  <div class="container-md py-5">
-    <hr class="white">
-  </div>
 
 
-  <div id="about-me" class="about-me container-md">
-    <div class="row">
-      <div class="col-sm-5 pt-5">
-        <div data-aos="fade-right" data-aos-duration="3000">
-        <h1>About me</h1>
-        <p>My name is Dayan and I am a 17-year-old passionate software developer. My interest started when I saw my
-          older brother do interesting tasks for his study in ICT. I started my journey in software development in 2023, and
-          I'm still learning a lot.</p>
+    <div class="container-md py-5">
+      <hr class="white">
+    </div>
 
-        <p>I am currently learing the following skills:</p>
-        <ul>
-          <li>HTML</li>
-          <li>CSS</li>
-          <li>Javascript</li>
-          <li>Java</li>
-          <li>Greenfoot</li>
-        </ul>
-      </div>
-      </div>
-      <div class="col-sm-6 ps-5 ms-5">
-        <div data-aos="fade-left" data-aos-duration="3000">
-        <img class="w-75 m-5 pb-5" src="img/202307 (28).JPG" alt="">
+
+    <div id="about-me" class="about-me container-md">
+      <div class="row">
+        <div class="col-sm-5">
+          <div data-aos="fade-right" data-aos-duration="3000">
+            <h1>Tips en ondersteuningen</h1>
+            <p>Om een gezonde werk-privébalans te behouden, stel duidelijke grenzen door werkuren vast te leggen en tijd
+              voor jezelf te plannen. Gebruik een agenda om werk- en privéactiviteiten te organiseren en neem regelmatig
+              pauzes om stress te verminderen. Bij stress, identificeer de oorzaken, beheer je tijd met technieken zoals
+              Pomodoro, en leer 'nee' zeggen als je overbelast bent. Voor netwerken, maak een professioneel
+              LinkedIn-profiel, houd het up-to-date en wees actief door artikelen te delen en in contact te blijven met
+              je netwerk.</p>
+          </div>
+        </div>
+        <div class="col-sm-6 ps-5 ms-5">
+          <div data-aos="fade-left" data-aos-duration="3000">
+            <h1>Huidige arbeidsmarkt</h1>
+            <p>De Nederlandse arbeidsmarkt is momenteel krap, met een grote vraag naar arbeidskrachten, vooral in
+              sectoren zoals zorg en techniek. Ondanks een lichte stijging van de werkloosheid in 2024, blijft de
+              werkloosheid relatief laag, maar veel vacatures blijven onvervuld.</p>
+          </div>
+        </div>
       </div>
     </div>
-  </div>
-  </div>
-</main>
+  </main>
 
 
   <footer>
-  <div data-aos="fade-up" data-aos-duration="1000">
-  <div id="contact" class="container-fluid py-5">
-    <hr class="white">
-  </div>
+    <div data-aos="fade-up" data-aos-duration="1000">
+      <div id="contact" class="container-fluid py-5">
+        <hr class="white">
+      </div>
 
-  <div class="container-md pb-4">
-    <div class="row text-center">
-        <div class="col-sm-12">
-          <h4>Contact</h4>
-          <p class="pt-3">Thank you for visiting my portfolio, if u would like to contact me or have questions feel free to send a message</p>
+      <div class="container-md pb-4">
+        <div class="row text-center">
+          <div class="col-sm-12">
+            <h4>Contact</h4>
+            <p class="pt-3">Bedankt voor het bekijken van onze website. Als je zelf nog vragen hebt mail ons!</p>
+          </div>
         </div>
-    </div>
-    <div class="row pt-4">
-      <div class="col-sm-6">
-        <p>ROC Mondriaan</p>
-        <p>Brasserskade 1</p>
-        <p>2612CA Delft</p>
-        <p>School mail: 302526463@student.rocmondriaan.nl</p>
-      </div>
-      <div class="col-sm-6">
-        <p>Private email: dayan.mangal@outlook.com</p>
-        <p><i class="bi bi-telephone"> </i>Phone number: 31 6 28 24 ** **</p>
-        <p class="h3">
-          <a href="https://github.com/D-mangal"><i class="bi bi-github text-light p-4"></i></a>
-          <a href="https://www.instagram.com/"><i class="bi bi-instagram text-danger p-4"></i></a>
-          <a href="https://nl.linkedin.com/"><i class="bi bi-linkedin text-primary p-4"></i></a>
-        </p>
+        <div class="row pt-4">
+          <div class="col-sm-6">
+            <p>Werk zoeken bv</p>
+            <p>Brasserskade 1</p>
+            <p>2612CA Delft</p>
+            <p>mail: zoek.naar.werk@gmail.com</p>
+          </div>
+          <div class="col-sm-6">
+          </div>
+        </div>
       </div>
     </div>
-  </div>
-</div>
-</footer>
+  </footer>
 
 
 
 
-<script src="js/main.js"></script>
-<script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
-<script>
-  AOS.init();
-</script>
+  <script src="js/main.js"></script>
+  <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+  <script>
+    AOS.init();
+  </script>
 </body>
 
 </html>
