--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
             <p>Er zijn verschillende manieren om werk te vinden. Gebruik vacaturesites zoals Indeed, LinkedIn en
               Glassdoor voor een grote aanbod van banen. Netwerken is ook belangrijk: bezoek evenementen en workshops in
               jouw vakgebied. Daarnaast kun je je inschrijven bij uitzendbureaus die je helpen bij het vinden van
-              tijdelijke of vaste banen. </p>
+              tijdelijke of vaste banen.</p>
           </div>
         </div>
         <div class="col-sm-6 ps-5 ms-5">
@@ -114,7 +114,11 @@
               pauzes om stress te verminderen. Bij stress, identificeer de oorzaken, beheer je tijd met technieken zoals
               Pomodoro, en leer 'nee' zeggen als je overbelast bent. Voor netwerken, maak een professioneel
               LinkedIn-profiel, houd het up-to-date en wees actief door artikelen te delen en in contact te blijven met
-              je netwerk.</p>
+              je netwerk. Je kan makkelijk een cv maken bij de volgende websites: <a
+                href="https://www.livecareer.com/nl/lp/lnlnl03.aspx?utm_source=bing&utm_medium=sem&utm_campaign=444047466&utm_term=cv%20maker&network=o&device=c&adposition=&adgroupid=1249045841313958&placement=&adid=&utm_source=bing&utm_medium=sem&utm_campaign=444047466&utm_term=cv%20maker&network=o&device=c&adposition=&adgroupid=1249045841313958&msclkid=015e57cd100b111c974d30e05e83896a&utm_content=cv%20maker">LiveCareer</a>
+            <a href="https://cvster.nl/?ga_utm_source=bing&utm_medium=ppc&utm_campaign=710321770&utm_adgroup=cv-maker&utm_custom=CVster.nl|NLBE|PS|NB&utm_content=&utm_term=cv%20maker&matchtype=e&device=c&location=151828&msclkid=f18762dcf845134d50ae05f1b6cd32e5">cvSter</a>
+            <a href="https://www.cvmaker.nl/">cvmaker</a> 
+          </p>
           </div>
         </div>
         <div class="col-sm-6 ps-5 ms-5">
